service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgerock-go-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 9090
      targetPort: 8080
  selector:
    app: forgerock-go-app
