ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgerock-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: forgerock-go.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgerock-go-service
                port:
                  number: 9090
